Fixed CSS and alignment issues

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -95,7 +95,7 @@ body{
 
         .businessRegistration-cover-left {
 
-            background-image: url("/images/businessRegistration.jpeg");
+            background-image: url("/images/grow.jpg");
             width: 35%;
             background-repeat:no-repeat;
    background-size:contain;
